Fixed bug with text overflow in dropwdown directive.

--- a/src/app/shared/directives/dropdown/dropdown.scss
+++ b/src/app/shared/directives/dropdown/dropdown.scss
@@ -30,6 +30,16 @@
     font-family: $main-font;
   }
 
+  .drop-label {
+    >div {
+      width: 100px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      margin: 0;
+      display: inline-block;
+    }
+  }
+
   .dropdown {
     button {
       color: $medium-grey;
